fixed some spacing issues

--- a/src/Layout/index.css
+++ b/src/Layout/index.css
@@ -64,7 +64,6 @@ body {
   padding: 2rem;
   margin: 0 2rem 4rem;
   min-width: 20rem;
-  /* max-width: 40rem; */
 }
 
 .container {
@@ -76,7 +75,6 @@ body {
 .item {
   width: 100%;
   margin: auto 1rem;
-  /* padding-bottom: 32%; Same as width, sets height */
   position: relative;
 }
 
@@ -91,7 +89,7 @@ h4 {
 }
 
 .deck-description {
-  margin: 1rem 2.2rem 0;
+  margin: 0 2.2rem 0;
 }
 
 .card-title {
@@ -117,9 +115,6 @@ h4 {
   }
 
   @media all and (min-width: 48rem) {
-    /* // <uniquifier>: Use a unique and descriptive class name
-    // <weight>: Use a value from 100 to 700 */
-    
     body {
       background-color: #f8f2e8;
     }
@@ -193,7 +188,7 @@ h4 {
     }
 
     h3 {
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
 
     .deckList {
@@ -201,7 +196,6 @@ h4 {
     }
 
     .customForm  {
-      /* width: 50%; */
       width: 48rem;
       margin: 0 5rem;
       padding: 2.8rem;
@@ -222,6 +216,7 @@ h4 {
       border-radius: 1rem 5rem;
       border-color: #526d3a;
       border-width: 1rem;
+      padding-left: 2rem;
     }
 
     .reversercorner {
